<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">PSMaRT</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_reports">Reports</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email *</string>
    <string name="prompt_password">Password *</string>
    <string name="action_sign_in">LOGIN</string>
    <string name="action_sign_in_short">LOGIN</string>
    <string name="welcome">"Login successful!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="logout">"Logout"</string>
    <string name="reset">RESET</string>

    <!--    <string name="invalid_username">Invalid email</string>-->
    <!--    <string name="invalid_password">Password must have at least 8 characters</string>-->
    <!--    <string name="login_failed">"Login failed"</string>-->
    <string name="forgot_password">Forgot Password?</string>
    <string name="reports">REPORTS</string>
    <string name="register_attendance">REGISTER ATTENDANCE</string>
    <string name="teacher">TEACHER</string>
    <string name="learner">LEARNER</string>
    <string name="register_new">REGISTER NEW DETAILS</string>
    <string name="menu_gallery" />


    <string name="tfe_od_app_name" translation_description="Object Detection demo app [CHAR_LIMIT=40]">Face Recognition</string>
    <string name="tfe_od_camera_error" translation_description="Error regarding camera support[CHAR_LIMIT=40]">This device doesn\'t support Camera2 API.</string>


    <string-array name="select_class_sec">
        <item>S.1</item>
        <item>S.2</item>
        <item>S.3</item>
        <item>S.4</item>
    </string-array>
    <string-array name="select_class_pri">
        <item>P.1</item>
        <item>P.2</item>
        <item>P.3</item>
        <item>P.4</item>
        <item>P.5</item>
        <item>P.6</item>
        <item>P.7</item>
    </string-array>


    <string name="open_str">open</string>
    <string name="close_str">close</string>
    <string name="getimage_str">Getimage </string>
    <string name="getchar_str">Getfeatures</string>
    <string name="fpmatch_str">Compare</string>
    <string name="eroll_str">REGISTER</string>
    <string name="search_str">SCAN</string>
    <string name="upchar_str">Upfeature</string>
    <string name="equit_str">Empty</string>
    <string name="down_str">downfeature</string>
    <string name="opensuccess_str">opened successfully</string>
    <string name="openfail_str">Failed to open</string>
    <string name="usbfail_str">no device found</string>
    <string name="readfptimeout_str">Reading Timeout</string>
    <string name="stopsearch_str">stop Search </string>
    <string name="Communicationerr_str">Communication error</string>
    <string name="readingfp_str">Reading Time left:</string>
    <string name="stopgetimage_str">Stop acquiring the image</string>
    <string name="getimageing_str">Image acquisition</string>
    <string name="getimagesuccess_str">Fingerprint found</string>
    <string name="getcharsuccess_str">Get char success</string>
    <string name="upimagesuccess_str">Up Img success</string>
    <string name="downsuccess_str">Feature download successful</string>
    <string name="downcharsuccess_str">Feature download successful  time consuming:</string>
    <string name="upcharsuccess_str">Upload feature successful  time consuming:</string>
    <string name="stopgetchar_str">Get feature active stop</string>
    <string name="getfailchar_str" tools:ignore="TypographyEllipsis">Feature is too bad, please re-enter...</string>
    <string name="putyourfinger_str">Press the fingerprint to compare the fingerprint</string>
    <string name="matchsuccess_str">Match success Score:</string>
    <string name="matchfail_str">Match failed   Score:</string>
    <string name="pickupfinger_str">confirm fingerprint</string>
    <string name="searchsuccess_str">Search for fingerprint success   ID:</string>
    <string name="searchfail_str"> fingerprint not found</string>
    <string name="getfpsuccess_str">Fingerprint captured</string>
    <string name="erollsuccess_str">Registered successfully</string>
    <string name="erollfail_str">Failed to register fingerprint</string>
    <string name="stoperoll_str">Registration is automatically stopped</string>
    <string name="RegModulefail_str">Fingerprints don\'t match</string>
    <string name="stopmatch_str">Compare to active stop</string>
    <string name="equitsuccess_str">Empty fingerprint successfully</string>
    <!--    <string name="dont_have_an_account_nregister_here">Don't\' have an account?\nRegister Here</string>-->
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="add_face">Add Face</string>
    <string name="actions">ACTIONS</string>
    <string name="scanned_fingerprint">Scanned fingerprint</string>
    <string name="scan_finger">Scan finger</string>
    <string name="my_account">My account</string>
    <string name="reports_">Reports</string>
    <string name="school_name">School name</string>
    <string name="date">date</string>
    <string name="no_face">No Face</string>
    <string name="home">HOME</string>
    <string name="name">Name:</string>
    <string name="role">Role:</string>
    <string name="current_date">Date:</string>
    <string name="enter_student_number">Enter Student Number</string>
    <string name="continue_">CONTINUE</string>
    <string name="enter_nin_number">Enter NIN Number</string>
    <string name="take_photo">Take Photo</string>
    <string name="gallery">GALLERY</string>
</resources>